PROJECT(VtkFun)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(X11)

INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(vtkFun vtkFun.cxx)

IF(X11_FOUND)
	TARGET_LINK_LIBRARIES(vtkFun ${X11_LIBRARIES} Xft Xinerama)
ENDIF(X11_FOUND)

SET(CMAKE_BUILD_TYPE "debug")

TARGET_LINK_LIBRARIES(vtkFun vtkRendering vtkCommon vtkImaging vtkInfovis)
